@@ -43,8 +43,9 @@ positives switched
 -added AddFloorAutoArea command, which enables and disables floors within a specified area
 -fixed texture flipping
 -removed ReverseExtents command (was broken since early 2007)
--added SetTextureMapping and ResetTextureMapping commands (replaces
-ReverseExtents) to allow manual setting of UV texture coordinate data
+-added SetTextureMapping and ResetTextureMapping commands (replaces ReverseExtents) to allow manual setting of UV texture coordinate data
+-added AddFillerWalls command which is a convenience function used in creating doors
+-added hotel rooms to the Triton Center
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
